# datastructures

./: .gitignore  CMakeLists.txt  README
avl-tree/: CMakeLists.txt  avl  avl.c  avl.h  example.c
